.provarCaches/00D410000011HE0EAM/objects/rstk__sopackdmd__c.object
<CustomObject>
    <description>sopackdmd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>LEFT(rstk__sopackdmd_sopackline__r.rstk__sopackline_packslip__r.rstk__sopack_shiphdr__r.rstk__soship_order__r.rstk__sohdr_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; rstk__sopackdmd_sopackline__r.rstk__sopackline_packslip__r.rstk__sopack_packslip__c &amp; &apos;_&apos; &amp; TEXT(rstk__sopackdmd_sopackline__r.rstk__sopackline_orderline__c) &amp; &apos;_&apos; &amp; rstk__sopackdmd_compname__c, 100)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sopackdmd_sopackline__r.rstk__sopackline_packslip__r.rstk__sopack_salesorder__c &amp; &apos;_&apos; &amp; TEXT(rstk__sopackdmd_sopackline__r.rstk__sopackline_orderline__c)  &amp; &apos;_&apos; &amp; TEXT(rstk__sopackdmd_sopackline__r.rstk__sopackline_shipper__c) &amp; &apos;_&apos; &amp; rstk__sopackdmd_compname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdmd_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>sopackdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdmd_compname__c</fullName>
        <description>Component name</description>
        <inlineHelpText>Component name</inlineHelpText>
        <label>Component Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdmd_qtypackage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Packaged</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdmd_qtyper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdmd_sopackline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing Slip Line</label>
        <referenceTo>rstk__sopackline__c</referenceTo>
        <relationshipName>sopackdmds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Obsolete: Packing Slip Line Demand</label>
    <nameField>
        <label>Packing Slip Line Demand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Line Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>